--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = [
     {name = "Heitor Cesarino", email = "heitor.cesarino@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10,<3.12"
-dependencies = []
+requires-python = ">=3.10,<3.13"
+dependencies = ["requests (>=2.32.5,<3.0.0)", "pandas (>=2.3.3,<3.0.0)", "pyarrow (>=22.0.0,<23.0.0)", "pydantic (>=2.12.5,<3.0.0)"]
 
 [tool.poetry]
 packages = [{ include = "bees_breweries" }]
